--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <!-- <script src="js/audio.js"></script> -->
   <!-- <script src="js/canvas.js"></script> -->
   <script src="js/webgl.js"></script>
+  <script src="js/sound.js"></script>
   <!-- <script src="js/wasm.js"></script> -->
   <script>
     const env = {
@@ -61,9 +62,11 @@
       jsConsoleLog,
       jsStorageSetString,
       jsStorageGetString,
+      jsNowMillis,
       hasLoadSnapshot,
       isKeyDown,
       isButtonDown,
+      tone,
     }
 
     let pressedKeys = {};
@@ -99,6 +102,11 @@
       const key = readCharStr(keyPtr, keyLen);
       const value = localStorage.getItem(key);
       return writeCharStr(value, valuePtr, valueLen);
+    }
+
+    function jsNowMillis() {
+      // TODO: what is this return type? Using usize for now.
+      return Date.now();
     }
 
     function hasLoadSnapshot() {
@@ -215,5 +223,4 @@
     }, false);
   </script>
 </body>
-
 </html>
